<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/menuloginactivity"
        android:background="@color/colorAccent"
        app:title="@string/Login"
        >

    </android.support.v7.widget.Toolbar>



    <TextView
        android:layout_below="@+id/menuloginactivity"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"/>
    <EditText
        android:layout_below="@id/username"
        android:id="@+id/valueUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@id/valueUsername"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"/>
    <EditText
        android:layout_below="@id/password"
        android:id="@+id/valuePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@id/valuePassword"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:onClick="doLogin"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login"
        android:layout_toEndOf="@id/login"
        android:text="@string/Cancel"
        android:onClick="onCancel" />
    <Button
        android:id="@+id/register"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:onClick="doRegister"/>

</RelativeLayout>