<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TeamDetailActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/detailtoolbar"
        android:background="@color/colorAccent"
        app:title="@string/detailteamtoolbar"
        />
    <ImageView
        android:layout_margin="2dp"
        android:id="@+id/detailimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/detalle_rm"
        android:src="@drawable/realmadrid"
        android:paddingRight="320dp"
        android:paddingBottom="130dp"

        android:scaleType="centerInside"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/detailtext"
        android:text="@string/Detailtextrm"/>
        />
    <Button
        android:id="@+id/detailbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/Detailboton"
        android:onClick="selectwebsite"/>

</LinearLayout>